--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,4 +1,4 @@
-name: Docker Image CI
+name: Primeira Treta no Docker
 
 on:
   push:
@@ -7,12 +7,30 @@ on:
     branches: [ master ]
 
 jobs:
-
   build:
-
     runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v2
-    - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
+
+    - run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
+    - run: docker build -t cygnetops/react-test -f Dockerfile.dev .
+    - run: docker run -e CI=true cygnetops/react-test npm test
+
+    - name: Criando Imagem Docker
+      run: docker build . --file Dockerfile --tag docker-react-101:$(date +%s)
+      
+    - name: Implementação no Elastic Bean Stalk
+        uses: einaregilsson/beanstalk-deploy@v18
+        with:
+          aws_access_key: ${{ secrets.AWS_ACCESS_KEY }}
+          aws_secret_key: ${{ secrets.AWS_SECRET_KEY }}
+
+          application_name: docker-react-101
+          environment_name: Dockerreact101-env
+          existing_bucket_name: eba-gmuhwxs9.us-east-1.elasticbeanstalk.com.
+          region: us-east-1
+
+          version_label: ${{ github.sha }}
+          deployment_package: deploy.zip
+
