--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -33,5 +33,5 @@ jobs:
         region: us-east-1
 
         version_label: ${{ github.sha }}
-        deployment_package: deploy.zip
+        deployment_package: public
 
