--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -11,7 +11,11 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
+    - name: Checkout source code
+      uses: actions/checkout@v2
+
+    - name: Generate deployment package
+      run: zip -r deploy.zip . -x '*.git*'
 
     - run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
     - run: docker build -t mafideju/docker-react-101 -f Dockerfile.dev .
@@ -26,12 +30,10 @@ jobs:
       with:
         aws_access_key: ${{ secrets.AWS_ACCESS_KEY }}
         aws_secret_key: ${{ secrets.AWS_SECRET_KEY }}
-
         application_name: docker-react-101
         environment_name: Dockerreact101-env
         existing_bucket_name: eba-gmuhwxs9.us-east-1.elasticbeanstalk.com.
         region: us-east-1
-
         version_label: 001
         deployment_package: deploy.zip
 
