--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -17,8 +17,9 @@ jobs:
     - name: Generate deployment package
       run: zip -r deploy.zip . -x '*.git*'
 
-    - run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
-    - run: docker build -t mafideju/docker-react-101 -f Dockerfile.dev .
+    - name: Logando no Sistema
+      run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
+    - run: docker build -t mafideju/docker-react-101 -f Dockerfile .
     - run: docker run -e CI=true mafideju/docker-react-101 npm test
 
     - name: Criando Imagem Docker
