--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -19,7 +19,7 @@ jobs:
 
     - name: Logando no Sistema
       run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
-    - run: docker build -t mafideju/docker-react-101 -f Dockerfile .
+    - run: docker build -t mafideju/docker-react-101 -f Dockerfile.dev .
     - run: docker run -e CI=true mafideju/docker-react-101 npm test
 
     - name: Criando Imagem Docker
