--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -11,21 +11,24 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout source code
+    - name: Checkout no Código Fonte
       uses: actions/checkout@v2
 
-    - name: Generate deployment package
+    - name: Criando Pasta para Deploy
       run: zip -r deploy.zip . -x '*.git*'
 
     - name: Logando no Sistema
       run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
-    - run: docker build -t mafideju/docker-react-101 -f Dockerfile.dev .
-    - run: docker run -e CI=true mafideju/docker-react-101 npm test
+
+    - name: Buildando o Projeto
+      run: docker build -t mafideju/docker-react-101 -f Dockerfile.dev .
+    
+    - name: Rodando o Build
+      run: docker run -e CI=true mafideju/docker-react-101 npm test
 
     - name: Criando Imagem Docker
       run: docker build . --file Dockerfile --tag docker-react-101:$(date +%s)
       
-
     - name: Deploy to EB
       uses: einaregilsson/beanstalk-deploy@v20
       with:
@@ -35,6 +38,6 @@ jobs:
         environment_name: Dockerreact101-env
         existing_bucket_name: elasticbeanstalk-us-east-1-788553702873
         region: us-east-1
-        version_label: 003
+        version_label: 004
         deployment_package: deploy.zip
 
