--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -38,6 +38,6 @@ jobs:
         environment_name: Dockerreact101-env
         existing_bucket_name: elasticbeanstalk-us-east-1-788553702873
         region: us-east-1
-        version_label: 005
+        version_label: ${{ github.sha }}
         deployment_package: deploy.zip
 
